# TFBS_footprinting3

./: .gitignore  Build_TFBSFootprinter.txt  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
example/: jaspar_tf_ids_selected.txt  sample_csv.csv  sample_ids.txt
hpc/: README.md  build_cas_pvalues.py  build_human_cas_thresholds.py  build_pwms_json.py  cas_only.py  ensembl_cache.py  ensembl_gtf.py  inspect_species_results.py  prefetch.py  publish_to_s3.py  select_transcripts.py
hpc/puhti/: README.md  aggregate_submit.sh  array_submit.sh  build_cas_distributions.py  pilot_submit.sh  submit_batch.sh
hpc/slurm/: submit.sh
hpc/species_lists/: test10.txt
sample_analysis/: jaspar_tf_ids_all.txt
tests/: conftest.py  test_cas_pvalue.py  test_hpc_empirical.py  test_output_parquet.py  test_pwm.py  test_scoring_vectorized.py
tfbs_footprinter3/: alignment.py  cli.py  data_loader.py  data_parsing.py  ensembl.py  io_utils.py  output.py  pipeline.py  plotting.py  pwm.py  scoring.py  tfbs_footprinter3.py  translators.py
tfbs_footprinter3/data/: JASPAR_2026_pwms.json  all_tfs_thresholds.jaspar_2018.1.json  pwms.json  species_nt_freq.json
