[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TFBS_footprinting3"
version = "0.0.7"
description = "Tool for identifying conserved TFBSs in vertebrate species."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Harlan Barker", email = "harlan.barker@tuni.fi" }
]
keywords = ["bioinformatics", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8"
]
dependencies = [
  "httplib2",
  "numpy",
  "matplotlib",
  "biopython",
  "msgpack",
  "wget",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/thirtysix/TFBS_footprinting3"

[project.optional-dependencies]
# You can add optional dev/test groups here in the future
# dev = ["check-manifest"]
# test = ["coverage"]

[project.scripts]
tfbs_footprinter3 = "tfbs_footprinter3.tfbs_footprinter3:main"
