[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TFBS_footprinting3"
dynamic = ["version"]
description = "Tool for identifying conserved TFBSs in vertebrate species."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Harlan Barker", email = "harlan.barker@tuni.fi" }
]
keywords = ["bioinformatics", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8"
]
dependencies = [
  "httplib2",
  "numpy",
  "matplotlib",
  "biopython",
  "msgpack>=1.0.5",  # pre-1.0.5 frequently fell back to the pure-Python unpacker, ~10x slower on msg files
  "wget",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/thirtysix/TFBS_footprinting3"

[project.optional-dependencies]
test = ["pytest>=7", "pyarrow>=10"]
dev = ["pytest>=7", "pyarrow>=10", "ruff>=0.1"]

[project.scripts]
tfbs_footprinter3 = "tfbs_footprinter3.tfbs_footprinter3:main"

[tool.setuptools.dynamic]
version = {attr = "tfbs_footprinter3.__version__"}

[tool.setuptools.packages.find]
include = ["tfbs_footprinter3*"]

[tool.setuptools.package-data]
tfbs_footprinter3 = ["data/*.json"]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["dist", "build", "venv", "sample_analysis/tfbs_results"]

[tool.ruff.lint]
select = [
  "E", "W",  # pycodestyle
  "F",       # pyflakes
  "I",       # isort
  "UP",      # pyupgrade
  "B",       # flake8-bugbear (only noisy-safe rules)
]
ignore = [
  "E501",    # line too long - we'll tackle after reformat
  "E402",    # module-level import not at top - matplotlib backend set is legitimate
  "E741",    # ambiguous variable names (l, I) - existing style
  "E731",    # lambda assignments - existing style
  "E722",    # bare except - TODO: audit and classify retryable vs fatal in ensemblrest refactor
  "F841",    # unused local variables - will clean in refactor
  "UP031",   # printf-style - batch later
  "B007",    # unused loop variable - intentional in some places
  "B008",    # function-call-in-default-argument
]

[tool.ruff.format]
# Keep defaults; no string-quote normalization for now to minimize churn
quote-style = "preserve"

